Desarrollo de la lista de productos y deserializacion de la lista generica. Creación del menú y datos del usario ingresado

--- a/Login/Aplicacion.csproj
+++ b/Login/Aplicacion.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Control de ingresos\Control de ingresos.csproj" />
     <ProjectReference Include="..\Testeo\Testeo.csproj" />
   </ItemGroup>
 
